OO-7478: Avoid overflow that breaks box layout for note content with very long words

--- a/src/main/webapp/static/themes/light/modules/_helpers.scss
+++ b/src/main/webapp/static/themes/light/modules/_helpers.scss
@@ -610,6 +610,7 @@
 
 .o_markdown_striped {
 	white-space: pre-wrap; 
+	word-break: break-word;
 }
 
 .o_two_col_metadata {
